--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -1,7 +1,7 @@
 .carousel-item {
   display: inline-flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 
   width: 100%;
   height: 100%;
