--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,8 +1,12 @@
-.links a {
-  display: inline-flex;
-
-  width: 2rem;
-  height: 2rem;
-  padding-right: 1rem;
-  margin-top: 1.5rem;
-}
+.links {
+  z-index: 3;
+  
+  a {
+    display: inline-flex;
+  
+    width: 2rem;
+    height: 2rem;
+    padding-right: 1rem;
+    margin-top: 1.5rem;
+  }
+} 
