--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -7,13 +7,16 @@
 
   a.active,
   a:visited.active {
-    border-bottom: 5px solid $darkBlue;
+    .active-link {
+      height: 5px;
+      background-color: $darkBlue;
+      animation: slideIn 1s forwards;
+    }
   }
 
   a,
   a:visited {
     color: $darkBlue;
-    border-bottom: 5px solid transparent;
   }
 
   li {
@@ -25,6 +28,7 @@ nav {
   justify-self: center;
 
   z-index: 4;
+  height: 2rem;
 
   .ham-menu {
     width: 3rem;
