--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -113,8 +113,8 @@
   }
 
   100% {
-    width: 40rem;
-    height: 70rem;
+    width: 50rem;
+    height: 80rem;
     transform: rotate(-15deg);
     top: -15vh;
     right: -33vw;
@@ -123,8 +123,8 @@
 
 @keyframes closeMenu {
   0% {
-    width: 40rem;
-    height: 70rem;
+    width: 50rem;
+    height: 80rem;
     transform: rotate(-15deg);
     top: -15vh;
     right: -33vw;
@@ -136,5 +136,18 @@
     transform: rotate(0);
     top: 0;
     right: 0;
+  }
+}
+
+//active nav link border
+@keyframes slideIn {
+  0% {
+    transform: translateX(-10%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
   }
 }
